add remove buttons

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     function addGoalAction(goal) {
     return {
-        type: ADD_TODO,
+        type: ADD_GOAL,
         goal
     }
     }
@@ -133,40 +133,6 @@
       todos.forEach(addTodoToDOM)
     })
 
-    // store.dispatch(addTodoAction({
-    // id: 0,
-    // name: 'Walk the dog',
-    // complete: false,
-    // }))
-
-    // store.dispatch(addTodoAction({
-    // id: 1,
-    // name: 'Wash the car',
-    // complete: false,
-    // }))
-
-    // store.dispatch(addTodoAction({
-    // id: 2,
-    // name: 'Go to the gym',
-    // complete: true,
-    // }))
-
-    // store.dispatch(removeTodoAction(1))
-
-    // store.dispatch(toggleTodoAction(0))
-
-    // store.dispatch(addGoalAction({
-    // id: 0,
-    // name: 'Learn Redux'
-    // }))
-
-    // store.dispatch(addGoalAction({
-    // id: 1,
-    //     name: 'Lose 20 pounds'
-    // }))
-
-    // store.dispatch(removeGoalAction(0))
-
     function addTodo () {
         const input = document.getElementById('todo')
         const name = input.value
@@ -196,10 +162,24 @@
     document.getElementById('goalBtn')
       .addEventListener('click', addGoal)
 
+    function createRemoveButton (onClick) {
+        const removeBtn = document.createElement('button')
+        removeBtn.innerHTML = 'X'
+        removeBtn.addEventListener('click', onClick)
+        return removeBtn
+    }
+
     function addTodoToDOM (todo) {
       const node = document.createElement('li')
       const text = document.createTextNode(todo.name)
+
+      const removeBtn = createRemoveButton(() => {
+          store.dispatch(removeTodoAction(todo.id))
+      })
+
       node.appendChild(text)
+      node.appendChild(removeBtn)
+
       node.style.textDecoration = todo.complete ? 'line-through' : 'none'
       node.addEventListener('click', () => {
           store.dispatch(toggleTodoAction(todo.id))
@@ -212,7 +192,12 @@
     function addGoalToDOM (goal) {
       const node = document.createElement('li')
       const text = document.createTextNode(goal.name)
+      const removeBtn = createRemoveButton(() => {
+          store.dispatch(removeGoalAction(goal.id))
+      })
+
       node.appendChild(text)
+      node.appendChild(removeBtn)
 
       document.getElementById('goals')
         .appendChild(node)
