--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
     }
   }
 
+  function checkAndDispatch (store, action) {
+      if (
+          action.type === ADD_TODO &&
+          action.todo.name.toLowerCase().includes('bitcoin')
+      ) {
+        return alert("Nope. That's a bad idea.")
+      }
+
+      if (
+          action.type === ADD_GOAL &&
+          action.goal.name.toLowerCase().includes('bitcoin')
+      ) {
+        return alert("Nope. That's a bad idea.")
+      }
+
+      store.dispatch(action)
+  }
+
   const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals
@@ -109,7 +127,7 @@
     const name = input.value
     input.value = ''
         
-    store.dispatch(addTodoAction({
+    checkAndDispatch(store, addTodoAction({
       name,
       complete: false,
       id: generateId()
@@ -121,7 +139,7 @@
     const name = input.value
     input.value = ''
 
-    store.dispatch(addGoalAction({
+    checkAndDispatch(store, addGoalAction({
       id: generateId(),
       name
     }))
