--- a/index.html
+++ b/index.html
@@ -90,28 +90,29 @@
     }
   }
 
-  function checkAndDispatch (store, action) {
-      if (
-          action.type === ADD_TODO &&
-          action.todo.name.toLowerCase().includes('bitcoin')
-      ) {
-        return alert("Nope. That's a bad idea.")
-      }
+  const checker = (store) => (next) => (action) => {
+    if (
+      action.type === ADD_TODO &&
+      action.todo.name.toLowerCase().includes('bitcoin')
+    ) {
+      return alert("Nope. That's a bad idea.")
+    }
 
-      if (
-          action.type === ADD_GOAL &&
-          action.goal.name.toLowerCase().includes('bitcoin')
-      ) {
-        return alert("Nope. That's a bad idea.")
-      }
+    if (
+      action.type === ADD_GOAL &&
+      action.goal.name.toLowerCase().includes('bitcoin')
+    ) {
+      return alert("Nope. That's a bad idea.")
+    }
 
-      store.dispatch(action)
+    return next(action)
   }
 
   const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals
-  }))
+  }), Redux.applyMiddleware(checker))
+
   store.subscribe(() => {
     const { goals, todos } = store.getState()
 
@@ -127,7 +128,7 @@
     const name = input.value
     input.value = ''
         
-    checkAndDispatch(store, addTodoAction({
+    store.dispatch(addTodoAction({
       name,
       complete: false,
       id: generateId()
@@ -139,7 +140,7 @@
     const name = input.value
     input.value = ''
 
-    checkAndDispatch(store, addGoalAction({
+    store.dispatch(addGoalAction({
       id: generateId(),
       name
     }))
