--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       const name = this.input.value
       this.input.value = ''
 
-      this.props.store.dispatch(addTodoAction({
+      store.dispatch(addTodoAction({
         name,
         complete: false,
         id: generateId()
@@ -249,11 +249,27 @@
   }
 
   class Goals extends React.Component {
+    addItem = (e) => {
+      e.preventDefault()
+      const name = this.input.value
+      this.input.value = ''
+
+      this.props.store.dispatch(addGoalAction({
+        id: generateId(),
+        name
+      }))
+    }
+
     render() {
       return (
         <div>
-            GOALS
-
+            <h1>Goals</h1>
+            <input
+              type='text'
+              placeholder='Add Goal'
+              ref={(input) => this.input = input} 
+            />
+            <button onClick={this.addItem}>Add Goal</button>
             <List />
         </div>
       )
@@ -265,7 +281,7 @@
           return (
               <div>
                 <Todos store={this.props.store} />
-                <Goals />
+                <Goals store={this.props.store} />
               </div>
           )
       }
