display item with remove button

--- a/index.html
+++ b/index.html
@@ -214,7 +214,16 @@
   function List (props) {
       return (
           <ul>
-            <li></li>
+            {props.items.map((item) => (
+              <li key={item.id}>
+                <span>
+                  {item.name}
+                </span>
+                <button onClick={() => props.remove(item)}>
+                  X
+                </button>
+              </li>
+            ))}
           </ul>
       )
   }
@@ -231,6 +240,11 @@
         id: generateId()
       }))
     }
+
+    removeItem = (todo) => {
+      this.props.store.dispatch(removeTodoAction(todo.id))
+    }
+
     render() {
       return (
         <div>
@@ -242,7 +256,9 @@
              />
              <button onClick={this.addItem}>Add Todo</button>
 
-            <List />
+            <List
+              items={this.props.todos}
+              remove={this.removeItem} />
         </div>
       )
     }
@@ -260,6 +276,10 @@
       }))
     }
 
+    removeItem = (goal) => {
+      this.props.store.dispatch(removeGoalAction(goal.id))
+    }
+
     render() {
       return (
         <div>
@@ -270,7 +290,9 @@
               ref={(input) => this.input = input} 
             />
             <button onClick={this.addItem}>Add Goal</button>
-            <List />
+            <List
+            items={this.props.goals}
+            remove={this.removeItem} />
         </div>
       )
     }
