do optimistic ui update on delete item

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
 
     removeItem = (todo) => {
       this.props.store.dispatch(removeTodoAction(todo.id))
+
+      return API.deleteTodo(todo.id)
+        .catch(() => {
+          this.props.store.dispatch(addTodoAction(todo))
+          alert('An error occurred. Please try again.')
+        })
     }
 
     toggleItem = (id) => {
@@ -213,6 +219,12 @@
 
     removeItem = (goal) => {
       this.props.store.dispatch(removeGoalAction(goal.id))
+
+      return API.deleteGoal(goal.id)
+        .catch(() => {
+          this.props.store.dispatch(addGoalAction(goal))
+          alert('An error occurred. Please try again.')
+        })
     }
 
     render() {
