--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
 
     toggleItem = (id) => {
         this.props.store.dispatch(toggleTodoAction(id))
+
+        return API.saveTodoToggle(id)
+          .catch(() => {
+              this.props.store.dispatch(toggleTodoAction(id))
+              alert('An error occurred. Please try again.')
+          })
     }
 
     render() {
