--- a/index.html
+++ b/index.html
@@ -161,14 +161,15 @@
   class Todos extends React.Component {
     addItem = (e) => {
       e.preventDefault()
-      const name = this.input.value
-      this.input.value = ''
 
-      store.dispatch(addTodoAction({
-        name,
-        complete: false,
-        id: generateId()
-      }))
+      return API.saveTodo(this.input.value)
+        .then((todo) => {
+          this.props.store.dispatch(addTodoAction(todo))
+          this.input.value = ''
+        })
+        .catch(() => {
+          alert('An error occurred. Please try again.')
+        })
     }
 
     removeItem = (todo) => {
@@ -214,13 +215,15 @@
   class Goals extends React.Component {
     addItem = (e) => {
       e.preventDefault()
-      const name = this.input.value
-      this.input.value = ''
 
-      this.props.store.dispatch(addGoalAction({
-        id: generateId(),
-        name
-      }))
+      return API.saveGoal(this.input.value)
+        .then((goal) => {
+          this.props.store.dispatch(addGoalAction(goal))
+          this.input.value = ''
+        })
+        .catch(() => {
+          alert('An error occurred. Please try again.')
+        })
     }
 
     removeItem = (goal) => {
