--- a/index.html
+++ b/index.html
@@ -77,7 +77,31 @@
           alert('An error occurred. Please try again.')
         })
     }
-    
+  }
+
+  function handleAddGoal (name, cb) {
+      return (dispatch) => {
+        return API.saveGoal(name)
+        .then((goal) => {
+          dispatch(addGoalAction(goal))
+          cb()
+        })
+        .catch(() => {
+          alert('An error occurred. Please try again.')
+        })
+      }
+  }
+
+  function handleDeleteGoal (goal) {
+    return (dispatch) => {
+      dispatch(removeGoalAction(goal.id))
+
+      return API.deleteGoal(goal.id)
+        .catch(() => {
+          dispatch(addGoalAction(goal))
+          alert('An error occurred. Please try again.')
+  })
+    }
   }
 
   function todos (state = [], action) {
@@ -223,25 +247,14 @@
   class Goals extends React.Component {
     addItem = (e) => {
       e.preventDefault()
-
-      return API.saveGoal(this.input.value)
-        .then((goal) => {
-          this.props.store.dispatch(addGoalAction(goal))
-          this.input.value = ''
-        })
-        .catch(() => {
-          alert('An error occurred. Please try again.')
-        })
+      this.props.store.dispatch(handleAddGoal(
+        this.input.value,
+        () => this.input.value = ''
+      ))
     }
 
     removeItem = (goal) => {
-      this.props.store.dispatch(removeGoalAction(goal.id))
-
-      return API.deleteGoal(goal.id)
-        .catch(() => {
-          this.props.store.dispatch(addGoalAction(goal))
-          alert('An error occurred. Please try again.')
-        })
+      this.props.store.dispatch(handleDeleteGoal(goal))
     }
 
     render() {
