--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
     }
   }
 
+  function handleAddTodo (name, cb) {
+    return (dispatch) => {
+      return API.saveTodo(name)
+        .then((todo) => {
+          dispatch(addTodoAction(todo))
+          cb()
+        })
+        .catch(() => {
+          alert('An error occurred. Please try again.')
+        })
+    }
+  }
+
   function handleDeleteTodo (todo) {
     return (dispatch) => {
       dispatch(removeTodoAction(todo.id))
@@ -76,6 +89,18 @@
           dispatch(addTodoAction(todo))
           alert('An error occurred. Please try again.')
         })
+    }
+  }
+
+  function handleToggle (id) {
+    return (dispatch) => {
+      dispatch(toggleTodoAction(id))
+
+      return API.saveTodoToggle(id)
+        .catch(() => {
+        dispatch(toggleTodoAction(id))
+        alert('An error occurred. Please try again.')
+  })
     }
   }
 
@@ -200,14 +225,10 @@
     addItem = (e) => {
       e.preventDefault()
 
-      return API.saveTodo(this.input.value)
-        .then((todo) => {
-          this.props.store.dispatch(addTodoAction(todo))
-          this.input.value = ''
-        })
-        .catch(() => {
-          alert('An error occurred. Please try again.')
-        })
+      this.props.store.dispatch(handleAddTodo(
+        this.input.value,
+        () => this.input.value = ''
+      ))
     }
 
     removeItem = (todo) => {
@@ -215,13 +236,7 @@
     }
 
     toggleItem = (id) => {
-        this.props.store.dispatch(toggleTodoAction(id))
-
-        return API.saveTodoToggle(id)
-          .catch(() => {
-              this.props.store.dispatch(toggleTodoAction(id))
-              alert('An error occurred. Please try again.')
-          })
+      this.props.store.dispatch(handleToggle(id))
     }
 
     render() {
