--- a/index.html
+++ b/index.html
@@ -125,7 +125,19 @@
         .catch(() => {
           dispatch(addGoalAction(goal))
           alert('An error occurred. Please try again.')
-  })
+        })
+    }
+  }
+
+  function handleInitialData () {
+    return (dispatch) => {
+      return Promise.all([
+        API.fetchTodos(),
+        API.fetchGoals()
+      ])
+        .then(([ todos, goals ]) => {
+          dispatch(receiveDataAction(todos, goals))
+        })
     }
   }
 
@@ -294,12 +306,7 @@
       componentDidMount () {
           const { store } = this.props
 
-          Promise.all([
-              API.fetchTodos(),
-              API.fetchGoals()
-          ]).then(([ todos, goals ]) => {
-              store.dispatch(receiveDataAction(todos, goals))
-          })
+          store.dispatch(handleInitialData())
 
           store.subscribe(() => this.forceUpdate())
       }
