use context to make store available more easily

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
       case REMOVE_TODO:
         return state.filter((todo) => todo.id !== action.id )
       case TOGGLE_TODO:
-        return state.map((todo) => todo.id !== action.id 
-        ? todo 
+        return state.map((todo) => todo.id !== action.id
+        ? todo
         : Object.assign({}, todo, { complete: !todo.complete }))
       case RECEIVE_DATA:
         return action.todos
@@ -206,7 +206,7 @@
     console.groupEnd()
     return result
   }
- 
+
   const store = Redux.createStore(Redux.combineReducers({
       todos,
       goals,
@@ -237,18 +237,18 @@
     addItem = (e) => {
       e.preventDefault()
 
-      this.props.store.dispatch(handleAddTodo(
+      this.props.dispatch(handleAddTodo(
         this.input.value,
         () => this.input.value = ''
       ))
     }
 
     removeItem = (todo) => {
-      this.props.store.dispatch(handleDeleteTodo(todo))
+      this.props.dispatch(handleDeleteTodo(todo))
     }
 
     toggleItem = (id) => {
-      this.props.store.dispatch(handleToggle(id))
+      this.props.dispatch(handleToggle(id))
     }
 
     render() {
@@ -271,17 +271,32 @@
     }
   }
 
+  class ConnectedTodos extends React.Component {
+    render () {
+      return (
+        <Context.Consumer>
+          {(store) => {
+            const { todos } = store.getState()
+
+            return <Todos todos={todos} dispatch={store.dispatch} />
+
+          }}
+        </Context.Consumer>
+      )
+    }
+  }
+
   class Goals extends React.Component {
     addItem = (e) => {
       e.preventDefault()
-      this.props.store.dispatch(handleAddGoal(
+      this.props.dispatch(handleAddGoal(
         this.input.value,
         () => this.input.value = ''
       ))
     }
 
     removeItem = (goal) => {
-      this.props.store.dispatch(handleDeleteGoal(goal))
+      this.props.dispatch(handleDeleteGoal(goal))
     }
 
     render() {
@@ -291,13 +306,27 @@
             <input
               type='text'
               placeholder='Add Goal'
-              ref={(input) => this.input = input} 
+              ref={(input) => this.input = input}
             />
             <button onClick={this.addItem}>Add Goal</button>
             <List
             items={this.props.goals}
             remove={this.removeItem} />
         </div>
+      )
+    }
+  }
+
+  class ConnectedGoals extends React.Component {
+    render () {
+      return (
+        <Context.Consumer>
+          {(store) => {
+            const { goals } = store.getState()
+
+            return <Goals goals={goals} dispatch={store.dispatch} />
+          }}
+        </Context.Consumer>
       )
     }
   }
@@ -312,7 +341,7 @@
       }
       render () {
           const { store } = this.props
-          const { todos, goals, loading } = store.getState()
+          const { loading } = store.getState()
 
           if (loading === true) {
             return <h3>Loading...</h3>
@@ -320,15 +349,41 @@
 
           return (
               <div>
-                <Todos todos={todos} store={this.props.store} />
-                <Goals goals={goals} store={this.props.store} />
+                <ConnectedTodos />
+                <ConnectedGoals />
               </div>
           )
       }
   }
 
+  class ConnectedApp extends React.Component {
+    render () {
+      return (
+        <Context.Consumer>
+          {(store) => (
+            <App store={store} />
+          )}
+        </Context.Consumer>
+      )
+    }
+  }
+
+  const Context = React.createContext()
+
+  class Provider extends React.Component {
+    render () {
+      return (
+        <Context.Provider value={this.props.store}>
+          {this.props.children}
+        </Context.Provider>
+      )
+    }
+  }
+
   ReactDOM.render(
-      <App store={store} />,
-      document.getElementById('app')
+    <Provider store={store}>
+      <ConnectedApp />
+    </Provider>,
+    document.getElementById('app')
   )
 </script>
